# rust-creativcoder_videos

./: .gitignore
app_news/: Cargo.toml  Readme.md
app_news/headlines/: .env_example  Cargo.toml
app_news/headlines/src/: hadlines_render.rs  headlines.rs  headlines_app.rs  main.rs
app_news/newsapi/: Cargo.toml
app_news/newsapi/src/: lib.rs
app_news/src/: theme.rs
cli_news_v1/: Cargo.toml  Readme.md
cli_news_v2/: Cargo.toml  Readme.md
cli_news_v2/.rpm/: cli_news_v2.spec
cli_news_v2/src/: main.rs
clinews/: Cargo.toml
clinews/src/: main.rs
three_demo/: Cargo.toml
three_demo/tests/: foo.rs
three_demo_lib/: Cargo.toml
three_demo_lib/src/: lib.rs
three_demo_lib/tests/: demo.rs  foo.rs
