[package]
name = "cli_news_v1"
version = "0.1.0"
authors = ["oscarricardosan <oscarricardosan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.3.0"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
colour = "0.6.0"
